# showdown-optimizer-v2

./: .gitignore  README.md  TODO.txt  pyproject.toml
.cursor/plans/: add_training_features_05686118.plan.md  enrich_lineup_universe_642f8fd6.plan.md  enumerate_historical_slates_90e65696.plan.md  fill_all_dkentries_rows_e420d70c.plan.md  fix_dkentries_parsing_05d144f5.plan.md  implement_pipeline_b_ca8d8658.plan.md  pipeline_a_buildout_55cc4118.plan.md  pipelineb_csv_exports_30a3e297.plan.md  showdown_lineup-gen_(pipeline_b_step_0)_b6f08e1c.plan.md  softmax_lineup_share_dcd10c36.plan.md  static_gpp_bins_e9ade839.plan.md  training_run_logging_54d35f13.plan.md
agent/: ARCHITECTURE.md  DATA_CONTRACTS.md  PIPELINES.md  README.md  STYLE_GUIDE.md  TESTING.md  WORKFLOW.md
prompts/: contest-sim.md  features.md  gpp-contests.md  lineup-gen.md  pipeline_a.md  train-test.md
scripts/: build_showdown_training_dataset.py  enumerate_nba_showdown_lineups.py  run_pipeline_b.py
src/dfs_opt/: __init__.py
src/dfs_opt/cli/: contest.py  main.py  training.py
src/dfs_opt/config/: gpp_bins.py  load.py  settings.py
src/showdown_optimizer_v2.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: test_distributions_fit.py  test_dk_lineup_parsing.py  test_dkentries_reader.py  test_enrich_showdown.py  test_entryname_segmentation.py  test_golden_example_enriched_entries.py  test_lineup_universe_enriched.py  test_lineup_universe_showdown.py  test_optimal_showdown.py  test_sabersim_parsing.py  test_softmax_share_model.py  test_training_pipeline_artifacts.py
(+36 files in other folders)
